<resources>
    <string name="app_name">Android OMDB search</string>
    <string name="imdb_poster">IMDB poster</string>
    <string name="search_open_movie_database">Search Open Movie Database</string>
    <string name="no_results_found">No results found!</string>
    <string name="poster_big">Poster big</string>
    <string name="directed_by">Directed by</string>
    <string name="written_by">Written by</string>
    <string name="starring">Starring</string>
    <string name="not_available">N/A</string>
    <string name="favourites">Favourites</string>
    <string name="add_favourite">Add favourite</string>
    <string name="delete_favourite">Delete favourite</string>
</resources>